Snippet preview, menu z-index problem fix

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -28,6 +28,7 @@
 .site-nav {
   float: right;
   line-height: $base-line-height * $base-font-size * 2.25;
+  z-index: 9999;
 
   .nav-trigger {
       display: none;
